--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="#">Anasayfa</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="#">Hakkımızda</a>
+                            <a class="nav-link" href="{% url 'about' %}">Hakkımızda</a>
                         </li>
                         <li class="nav-item mx-3">
                             <a class="nav-link" href="#">Hizmetlerimiz</a>
