--- a/static/css/style.css
+++ b/static/css/style.css
@@ -912,3 +912,130 @@ body {
     border-radius: 20px;
     box-shadow: 0 0 10px #2A5298;
 }
+
+.valuesborder {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    border: 3px solid #ff7b00;
+    position: relative;
+}
+
+@keyframes valuesborderleft {
+    from {
+        position: relative;
+        left: 0px;
+    }
+    to {
+        position: relative;
+        left: -700px;
+    }
+}
+
+.dot {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    background-color: #ff7b00;
+    border-radius: 50%;
+    border: 0px;
+    margin: 0px !important;
+    padding: 0px !important;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    transition: all 0.3s ease;
+}
+
+.dot:hover {
+    background-color: #ff7b00;
+    animation: dotbackgroundanimation 0.5s forwards;
+    cursor: pointer;
+}
+
+@keyframes dotbackgroundanimation {
+    100% {
+        box-shadow: 0 0 10px #ff7b00;
+        background: linear-gradient(45deg, #131411, #20201b, #ff7b00);
+    }
+}
+
+@keyframes valuesborderanimation {
+    from {
+        border-width: 3px;
+    }
+    to {
+        border-width: 0px;
+    }
+}
+
+@keyframes valuesborderafteranimation {
+    from {
+        border-width: 0px;
+    }
+    to {
+        border-width: 3px;
+    }
+}
+
+@keyframes dotbackgroundafteranimation {
+    100% {
+        background-color: #ff7b00;
+    }
+}
+
+.dot-top {
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.dot-right {
+    right: -330px;
+    top: 25%;
+    transform: translateY(-50%);
+}
+
+.dot-bottom {
+    bottom: -150px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.dot-left {
+    left: -60px;
+    top: -25%;
+    transform: translateY(-50%);
+}
+
+.valuescontent {
+    border-radius: 20px;
+    box-shadow: 0 0 20px#ff7b00;
+    width: 1000px;
+    height: 400px;
+    transition: all 0.3s ease;
+}
+
+.valuestext {
+    color: #fff;
+    font-size: 25px;
+}
+
+.year-title {
+    font-size: 60px;
+}
+
+#year1 {
+    color: #2d67cc;
+}
+
+#year2 {
+    color: #ff7b00;
+}
+
+#year3 {
+    color: #9e9e9e;
+}
