--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
             <div class="container justify-content-center text-center mb-5">
-                <a class="navbar-brand mx-auto" href="#">Ertuğrul Avukatlık</a>
+                <a class="navbar-brand mx-auto" href="{% url 'index' %}">Ertuğrul Avukatlık</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="#">Anasayfa</a>
+                            <a class="nav-link" href="{% url 'index' %}">Anasayfa</a>
                         </li>
                         <li class="nav-item mx-3">
                             <a class="nav-link" href="{% url 'about' %}">Hakkımızda</a>
@@ -54,7 +54,7 @@
     
     <div class="container-fluid my-5">
         <h1 class="text-center about-title">Hakkımızda</h1>
-        <p class="text-center about-paragraph">Ertuğrul Avukatlık olarak, yılların verdiği deneyim ve uzmanlıkla müvekkillerimize güvenilir hukuki danışmanlık sunuyoruz. Adalet, dürüstlük ve müvekkil memnuniyeti ilkelerimizle, haklarınızın korunması için her zaman yanınızdayız.</p>
+        <p class="text-center about-paragraph pb-5">Ertuğrul Avukatlık olarak, yılların verdiği deneyim ve uzmanlıkla müvekkillerimize güvenilir hukuki danışmanlık sunuyoruz. Adalet, dürüstlük ve müvekkil memnuniyeti ilkelerimizle, haklarınızın korunması için her zaman yanınızdayız.</p>
         <div class="row d-flex justify-content-between my-5">
             <div class="col-md-3">
                 <img class="img-fluid about-image" src="{% static 'images/hakkimizda1.jpg' %}" id="aboutimage1">
@@ -104,6 +104,122 @@
             </div>
             <div class="col-md-6 d-flex align-items-center justify-content-center">
                 <h3 class="text-center about-h3">Misyon Ve Vizyon</h3>
+            </div>
+        </div>
+
+        <div class="row d-flex flex-row justify-content-center align-items-center py-5">
+            <div class="valuesborder my-5">
+                <div class="dot dot-top" id="adalet">Adalet</div>
+                <div class="dot dot-right" id="durustluk">Dürüstlük</div>
+                <div class="dot dot-bottom" id="guven">Güven</div>
+                <div class="dot dot-left" id="seffaflik">Şeffaflık</div>
+            </div>
+            <div class="valuescontent d-flex justify-content-center align-items-center d-none my-5">
+                <p class="text-center valuestext">Hukukun temel direği olan adalet, bizim için vazgeçilmezdir. Her davada tarafsız,
+                objektif ve ilkeli bir yaklaşım sergiliyor, hukukun üstünlüğüne olan inancımızla müvekkillerimizin haklarını sonuna kadar savunuyoruz.
+                Adaletin tecellisi için titizlikle çalışıyor, her müvekkilimize eşit ve adil bir hizmet sunuyoruz.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" id="whyus-container">
+        <div class="row text-center my-5">
+            <div class="col-md-4">
+                <i class="fa-solid fa-handshake whyus-icon1 mx-2"></i>
+                <span class="whyus-span1">+15</span>
+                <p style="color: #fff; font-size: 30px;">Yıl Deneyim</p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa-solid fa-thumbs-up whyus-icon1 mx-2"></i>
+                <span class="whyus-span1">%95</span>
+                <p style="color: #fff; font-size: 30px;">Başarı Oranı</p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa-solid fa-phone whyus-icon1 mx-2"></i>
+                <span class="whyus-span1">7/24</span>
+                <p style="color: #fff; font-size: 30px;">Ulaşılabilirlik</p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="container-fluid my-5">
+        <h2 class="text-center services-title">Ekibimiz</h2>
+        <p class="text-center services-paragraph">Alanında uzman avukat kadromuz, haklarınızı korumak için yanınızda.</p>
+        <div class="row d-flex justify-content-center align-items-center my-5">
+            <div class="col-md-3 d-flex justify-content-center align-items-center text-center flex-column my-4">
+                <div class="person-item px-3"> 
+                    <img class="img-fluid person-image mt-3" src="{% static 'images\avukat1.webp' %}" style="width: 250px; height: 360px;">
+                    <div class="person-info my-4">
+                        <h3 class="person-name">Mehmet Kaya</h3>
+                        <p class="person-degree">Avukat</p>
+                        <p class="person-email">mehmetkaya79@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center align-items-center text-center flex-column my-4">
+                <div class="person-item px-3">
+                    <img class="img-fluid person-image mt-3" src="{% static 'images\avukat2.avif' %}" style="width: 250px; height: 360px;">
+                    <div class="person-info my-4">
+                        <h3 class="person-name">Ayşe Demir</h3>
+                        <p class="person-degree">Arabulucu</p>
+                        <p class="person-email">aysedemir81@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center align-items-center text-center flex-column my-4">
+                <div class="person-item px-3">
+                    <img class="img-fluid person-image mt-3" src="{% static 'images\avukat3.avif' %}" style="width: 250px; height: 360px;">
+                    <div class="person-info my-4">
+                        <h3 class="person-name">Ahmet Yılmaz</h3>
+                        <p class="person-degree">Avukat, Arabulucu</p>
+                        <p class="person-email">ahmetyilmaz47@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 d-flex justify-content-center align-items-center text-center flex-column my-4">
+                <div class="person-item px-3">
+                    <img class="img-fluid person-image mt-3" src="{% static 'images\avukat4.avif' %}" style="width: 250px; height: 360px;">
+                    <div class="person-info my-4">
+                        <h3 class="person-name">Zeynep Aydın</h3>
+                        <p class="person-degree">Avukat</p>
+                        <p class="person-email">zeynepaydin79@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr style="color: #fff;">
+
+        <h2 class="text-center services-title">İletişim</h2>
+        <p class="text-center services-paragraph">Sorularınız ve hukuki ihtiyaçlarınız için bizimle iletişime geçebilirsiniz.</p>
+        <div class="row my-5">
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-phone contact-icon px-1"></i><p class="contact-paragraph"> +90 123 456 78 90 </p>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-envelope contact-icon px-1"></i><p class="contact-paragraph">m.toker2009@gmail.com</p>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-city contact-icon px-1"></i><p class="contact-paragraph"> Ankara, Yenimahalle</p>
+            </div>
+        </div>
+        <div class="row d-flex flex-row mx-4 justify-content-between">
+            <div class="col-md-6">
+                <div class="contact-form">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="İsim">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Soyisim">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Email">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Konu">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Mesaj">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="contact-button px-5 py-3 my-3">Gönder</button>
+                </div>
+            </div>
+
+            <div class="col-md-6 d-flex justify-content-md-end justify-content-center my-3">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6227.586075120915!2d2.2865390227570868!3d48.85783250966159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1str!2str!4v1761420008023!5m2!1str!2str" width="800" height="450" class="contact-map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
