--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1039,3 +1039,75 @@ body {
 #year3 {
     color: #9e9e9e;
 }
+
+.workspacespage-title {
+    color: #ff7b00;
+    font-size: 90px;
+}
+
+.workspacespage-paragraph {
+    color: #fff;
+    font-size: 25px;
+}
+
+.workspaces-item {
+    box-shadow: 0 0 15px #fff;
+    width: 550px;
+    height: 400px;
+    border-radius: 10px;
+    background: linear-gradient(45deg, #3c3d34, #57584c);
+    transition: all 0.3s ease;
+}
+
+.workspaces-item:hover {
+    box-shadow: 0 0 15px #ff7b00;
+    border-radius: 20px;
+    background: linear-gradient(45deg, #3c3d34, #57584c);
+    transform: scale(1.05);
+}
+
+.workspaces-button {
+    background: linear-gradient(45deg, #8f5b18, #ff7b00);
+    border: none;
+    border-radius: 20px;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20px);
+    transition: all 0.3s ease;
+}
+
+.workspaces-button:hover {
+    background: linear-gradient(45deg, #8f5b18, #ff7b00);
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 0 20px #080807;
+    transform: scale(1.05);
+}
+
+.workspaces-item:hover .workspaces-button {
+    box-shadow: 0 0 20px #080807;
+    border-radius: 20px;
+    background: linear-gradient(45deg, #8f5b18, #ff7b00);
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+
+.workspaces-item:hover .workspaces-button:hover {
+    box-shadow: 0 0 20px #ff7b00;
+    border-radius: 20px;
+    background: linear-gradient(45deg, #8f5b18, #ff7b00);
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.05);
+}
+
+.workspaces-title {
+    font-size: 40px;
+    color: #ff7b00;
+}
+
+.workspaces-paragraph {
+    font-size: 20px;
+    color: #fff;
+}
