--- a/templates/about.html
+++ b/templates/about.html
@@ -35,10 +35,7 @@
                             <a class="nav-link" href="{% url 'about' %}">Hakkımızda</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="#">Hizmetlerimiz</a>
-                        </li>
-                        <li class="nav-item mx-3">
-                            <a class="nav-link" href="#">Çalışma Alanlarımız</a>
+                            <a class="nav-link" href="{% url 'workspaces' %}">Çalışma Alanlarımız</a>
                         </li>
                         <li class="nav-item mx-3">
                             <a class="nav-link" href="#">Makaleler</a>
