--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="{% url 'workspaces' %}">Çalışma Alanlarımız</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="#">Makaleler</a>
+                            <a class="nav-link" href="{% url 'blogs' %}">Bloglar</a>
                         </li>
                         <li class="nav-item mx-3">
                             <a class="nav-link" href="#">İletişim</a>
