--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="{% url 'blogs' %}">Bloglar</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="#">İletişim</a>
+                            <a class="nav-link" href="{% url 'contact' %}">İletişim</a>
                         </li>
                     </ul>
                 </div>
@@ -187,7 +187,9 @@
             </div>
         </div>
         <hr style="color: #fff;">
+    </div>
 
+    <div class="container-fluid last-container mt-5">
         <h2 class="text-center services-title">İletişim</h2>
         <p class="text-center services-paragraph">Sorularınız ve hukuki ihtiyaçlarınız için bizimle iletişime geçebilirsiniz.</p>
         <div class="row my-5">
