--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,7 +16,6 @@
     <title>Ertuğrul Avukatlık</title>
 </head>
 <body>
-    
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
             <div class="container justify-content-center text-center mb-5">
@@ -49,100 +48,37 @@
         </nav>
     </div>
 
-    <div class="container-fluid last-container mt-5">
-        <h1 class="text-center blogs-title">Makalelerimiz</h1>
-        <p class="text-center blogs-paragraph">Hukuk dünyasındaki güncel gelişmeler, yasal haklarınız ve merak ettikleriniz hakkında bilgilendirici yazılarımızı okuyabilirsiniz.</p>
-        <div class="row d-flex justify-content-center mt-5">
-            <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
-                    <h2 class="text-center blogs-item-title pt-5 mx-auto">Boşanma Davasında Mal Paylaşımı Nasıl Yapılır?</h2>
-                    <div class="blogs-header d-flex flex-row px-4">
-                        <div class="blogs-circle me-3"></div>
-                        <hr class="blogs-item-hr">
-                    </div>
-                    <div class="blogs-content d-flex justify-content-center align-items-center flex-column px-5 my-3">
-                        <p class="text-center blogs-item-paragraph">
-                            Boşanmada mal paylaşımı nasıl yapılır? Edinilmiş mallara katılma rejimi ve haklarınızı koruma yollarını öğrenin.
-                        </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
-                    </div>
-                </a>
+
+    <div class="container-fluid last-container">
+        <h1 class="text-center contact-title">İletişim</h1>
+        <p class="text-center contact-paragraph">Sorularınız ve hukuki ihtiyaçlarınız için bizimle iletişime geçebilirsiniz.</p>
+        <div class="row my-5">
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-phone contact-icon px-1"></i><p class="contact-paragraph"> +90 123 456 78 90 </p>
             </div>
-            <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
-                    <h2 class="text-center blogs-item-title pt-5 mx-auto">İşten Çıkarılma Sonrası Tazminat Hakları</h2>
-                    <div class="blogs-header d-flex flex-row px-4">
-                        <div class="blogs-circle me-3"></div>
-                        <hr class="blogs-item-hr">
-                    </div>
-                    <div class="blogs-content d-flex justify-content-center align-items-center flex-column px-5 my-3">
-                        <p class="text-center blogs-item-paragraph">
-                            İşten çıkarılma durumunda kıdem ve ihbar tazminatı haklarınızı öğrenin.
-                        </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
-                    </div>
-                </a>
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-envelope contact-icon px-1"></i><p class="contact-paragraph">m.toker2009@gmail.com</p>
             </div>
-            <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
-                    <h2 class="text-center blogs-item-title pt-5 mx-auto">KVKK Nedir ve İşletmenizi Nasıl Etkiler?</h2>
-                    <div class="blogs-header d-flex flex-row px-4">
-                        <div class="blogs-circle me-3"></div>
-                        <hr class="blogs-item-hr">
-                    </div>
-                    <div class="blogs-content d-flex justify-content-center align-items-center flex-column px-5 my-3">
-                        <p class="text-center blogs-item-paragraph">
-                            KVKK uyum süreçleri her işletme için zorunludur. İşletmenizin veri güvenliğini nasıl sağlayacağını bu makaleden öğrenin.
-                        </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
-                    </div>
-                </a>
+            <div class="col-md-4 d-flex justify-content-center flex-row">
+                <i class="fa-solid fa-city contact-icon px-1"></i><p class="contact-paragraph"> Ankara, Yenimahalle</p>
+            </div>
+        </div>
+        <div class="row d-flex flex-row mx-4 justify-content-between">
+            <div class="col-md-6">
+                <div class="contact-form">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="İsim">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Soyisim">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Email">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Konu">
+                    <input type="text" class="contact-input form-control my-4 py-3" placeholder="Mesaj">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="contact-button px-5 py-3 my-3">Gönder</button>
+                </div>
             </div>
 
-            <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
-                    <h2 class="text-center blogs-item-title pt-5 mx-auto">Kira Sözleşmelerinde Kiracı ve Ev Sahibi Hakları</h2>
-                    <div class="blogs-header d-flex flex-row px-4">
-                        <div class="blogs-circle me-3"></div>
-                        <hr class="blogs-item-hr">
-                    </div>
-                    <div class="blogs-content d-flex justify-content-center align-items-center flex-column px-5 my-3">
-                        <p class="text-center blogs-item-paragraph">
-                            Kira uyuşmazlıklarında kiracı ve ev sahibinin hakları nelerdir? Tahliye süreçleri ve yasal haklarınız hakkında bilgi alın.
-                        </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
-                    <h2 class="text-center blogs-item-title pt-5 mx-auto">Miras Hukukunda Saklı Pay ve Tenkis Davası</h2>
-                    <div class="blogs-header d-flex flex-row px-4">
-                        <div class="blogs-circle me-3"></div>
-                        <hr class="blogs-item-hr">
-                    </div>
-                    <div class="blogs-content d-flex justify-content-center align-items-center flex-column px-5 my-3">
-                        <p class="text-center blogs-item-paragraph">
-                            Saklı pay nedir ve tenkis davası ne zaman açılır? Miras haklarınızı korumak için bilmeniz gerekenleri keşfedin.
-                        </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
-                    <h2 class="text-center blogs-item-title pt-5 mx-auto">Trafik Kazalarında Sigorta Tazminat Süreci</h2>
-                    <div class="blogs-header d-flex flex-row px-4">
-                        <div class="blogs-circle me-3"></div>
-                        <hr class="blogs-item-hr">
-                    </div>
-                    <div class="blogs-content d-flex justify-content-center align-items-center flex-column px-5 my-3">
-                        <p class="text-center blogs-item-paragraph">
-                            Trafik kazası sonrası sigorta tazminatı nasıl alınır? Hasar tespitinden dava sürecine kadar tüm aşamaları öğrenin.
-                        </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
-                    </div>
-                </a>
+            <div class="col-md-6 d-flex justify-content-md-end justify-content-center my-3">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6227.586075120915!2d2.2865390227570868!3d48.85783250966159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1str!2str!4v1761420008023!5m2!1str!2str" width="800" height="450" class="contact-map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
