--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="{% url 'blogs' %}">Bloglar</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="#">İletişim</a>
+                            <a class="nav-link" href="{% url 'contact' %}">İletişim</a>
                         </li>
                     </ul>
                 </div>
@@ -48,7 +48,7 @@
         </nav>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid last-container">
         <h1 class="text-center workspacespage-title">Çalışma Alanlarımız</h1>
         <p class="text-center workspacespage-paragraph">Geniş uzmanlık alanlarımızla, her hukuki ihtiyacınıza profesyonel çözümler sunuyoruz.</p>
         <div class="row d-flex justify-content-center">
