--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="{% url 'blogs' %}">Bloglar</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" href="#">İletişim</a>
+                            <a class="nav-link" href="{% url 'contact' %}">İletişim</a>
                         </li>
                     </ul>
                 </div>
@@ -61,7 +61,8 @@
                 <p class="welcome-paragraph pb-5">Ertuğrul Avukatlık olarak, hukuki sorunlarınıza profesyonel ve güvenilir çözümler sunuyoruz. Deneyimli kadromuz ve alanında uzman avukatlarımızla, müvekkillerimizin haklarını en iyi şekilde korumak için titizlikle çalışıyoruz. Adaletin ve hukukun üstünlüğüne olan inancımızla, her davada size en kaliteli hukuki danışmanlığı sağlamayı taahhüt ediyoruz. Hukuki ihtiyaçlarınız için yanınızdayız</p>
             </div>
         </div>
-
+    </div>
+    <div class="container-fluid">
         <div class="row py-5 mx-5 d-flex justify-content-between">
             <div class="col-md-6 ps-md-5">
                 <div class="whoarewe-imageborder">
@@ -77,7 +78,8 @@
                 <span class="services-span">haklarınızın korunması</span> için yanınızdayız.</p>
             </div>
         </div>
-
+    </div>
+    <div class="container-fluid" id="services-container">
         <div class="row py-5 mx-5 d-flex justify-content-between">
             <div class="col-md-6 d-flex flex-column">
                 <h2 class="services-title pt-5">Hizmetlerimiz</h2>
@@ -170,7 +172,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid my-5">
+    <div class="container-fluid my-5" id="reference-container">
         <div class="row d-flex justify-content-between">
             <div class="col-md-6 ps-md-5">
                 <div class="whyus-imageborder my-4 ms-md-5">
@@ -486,7 +488,7 @@
         </div>
     </div>
 
-    <div class="container-fluid my-5">
+    <div class="container-fluid" id="ffa-container">
         <h2 class="text-center services-title">Sıkça Sorulan Sorular</h2>
         <div class="row d-flex justify-content-between mx-md-5 mx-2 my-5">
             <div class="col-md-6">
@@ -525,7 +527,7 @@
         </div>
     </div>
 
-    <div class="container-fluid my-5" id="contact-container">
+    <div class="container-fluid" id="contact-container">
         <h2 class="text-center services-title">İletişim</h2>
         <p class="text-center services-paragraph">Sorularınız ve hukuki ihtiyaçlarınız için bizimle iletişime geçebilirsiniz.</p>
         <div class="row my-5">
@@ -560,7 +562,7 @@
     </div>
 
     <footer>
-        <div class="container-fluid py-5" id="footer-container">
+        <div class="container-fluid py-5" id="footerindex-container">
             <div class="row d-flex justify-content-center flex-row">
                 <div class="col-md-3 d-flex justify-content-center align-items-center flex-column text-center">
                     <h1 class="footer-title">Ertuğrul Avukatlık</h1>
