--- a/templates/about.html
+++ b/templates/about.html
@@ -243,11 +243,11 @@
 
                 <div class="col-md-3 text-center d-flex justify-content-center align-items-center flex-column">
                     <h3 class="footer-h3">Çalışma Alanlarımız</h3>
-                    <a href="#" class="footer-link my-2">Ticaret Hukuku</a>
-                    <a href="#" class="footer-link my-2">İş Hukuku</a>
-                    <a href="#" class="footer-link my-2">Aile Hukuku</a>
-                    <a href="#" class="footer-link my-2">Gayrimenkul Hukuku</a>
-                    <a href="#" class="footer-link my-2">Ceza Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">Ticaret Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">İş Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">Aile Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">Gayrimenkul Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">Ceza Hukuku</a>
                 </div>
 
                 <div class="col-md-3 text-center d-flex justify-content-center align-items-center flex-column">
