--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -54,7 +54,7 @@
         <p class="text-center blogs-paragraph">Hukuk dünyasındaki güncel gelişmeler, yasal haklarınız ve merak ettikleriniz hakkında bilgilendirici yazılarımızı okuyabilirsiniz.</p>
         <div class="row d-flex justify-content-center mt-5">
             <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
+                <a href="{% url 'blog' slug='bosanma-davasinda-mal-paylasimi' %}" class="blogs-item d-block text-decoration-none">
                     <h2 class="text-center blogs-item-title pt-5 mx-auto">Boşanma Davasında Mal Paylaşımı Nasıl Yapılır?</h2>
                     <div class="blogs-header d-flex flex-row px-4">
                         <div class="blogs-circle me-3"></div>
@@ -64,12 +64,12 @@
                         <p class="text-center blogs-item-paragraph">
                             Boşanmada mal paylaşımı nasıl yapılır? Edinilmiş mallara katılma rejimi ve haklarınızı koruma yollarını öğrenin.
                         </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
+                        <button class="text-center workspaces-button p-3">Okumaya Başlayın</button>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
+                <a href="{% url 'blog' slug='isten-cikarilma-sonrasi-tazminat-haklari' %}" class="blogs-item d-block text-decoration-none">
                     <h2 class="text-center blogs-item-title pt-5 mx-auto">İşten Çıkarılma Sonrası Tazminat Hakları</h2>
                     <div class="blogs-header d-flex flex-row px-4">
                         <div class="blogs-circle me-3"></div>
@@ -79,12 +79,12 @@
                         <p class="text-center blogs-item-paragraph">
                             İşten çıkarılma durumunda kıdem ve ihbar tazminatı haklarınızı öğrenin.
                         </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
+                        <button class="text-center workspaces-button p-3">Okumaya Başlayın</button>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
+                <a href="{% url 'blog' slug='kvkk-nedir-ve-isletmenizi-nasil-etkiler' %}" class="blogs-item d-block text-decoration-none">
                     <h2 class="text-center blogs-item-title pt-5 mx-auto">KVKK Nedir ve İşletmenizi Nasıl Etkiler?</h2>
                     <div class="blogs-header d-flex flex-row px-4">
                         <div class="blogs-circle me-3"></div>
@@ -94,13 +94,13 @@
                         <p class="text-center blogs-item-paragraph">
                             KVKK uyum süreçleri her işletme için zorunludur. İşletmenizin veri güvenliğini nasıl sağlayacağını bu makaleden öğrenin.
                         </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
+                        <button class="text-center workspaces-button p-3">Okumaya Başlayın</button>
                     </div>
                 </a>
             </div>
 
             <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
+                <a href="{% url 'blog' slug='kira-sozlesmelerinde-kiraci-ve-ev-sahibi-haklari' %}" class="blogs-item d-block text-decoration-none">
                     <h2 class="text-center blogs-item-title pt-5 mx-auto">Kira Sözleşmelerinde Kiracı ve Ev Sahibi Hakları</h2>
                     <div class="blogs-header d-flex flex-row px-4">
                         <div class="blogs-circle me-3"></div>
@@ -110,12 +110,12 @@
                         <p class="text-center blogs-item-paragraph">
                             Kira uyuşmazlıklarında kiracı ve ev sahibinin hakları nelerdir? Tahliye süreçleri ve yasal haklarınız hakkında bilgi alın.
                         </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
+                        <button class="text-center workspaces-button p-3">Okumaya Başlayın</button>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
+                <a href="{% url 'blog' slug='miras-hukukunda-sakli-pay-ve-tenkis-davasi' %}" class="blogs-item d-block text-decoration-none">
                     <h2 class="text-center blogs-item-title pt-5 mx-auto">Miras Hukukunda Saklı Pay ve Tenkis Davası</h2>
                     <div class="blogs-header d-flex flex-row px-4">
                         <div class="blogs-circle me-3"></div>
@@ -125,12 +125,12 @@
                         <p class="text-center blogs-item-paragraph">
                             Saklı pay nedir ve tenkis davası ne zaman açılır? Miras haklarınızı korumak için bilmeniz gerekenleri keşfedin.
                         </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
+                        <button class="text-center workspaces-button p-3">Okumaya Başlayın</button>
                     </div>
                 </a>
             </div>
             <div class="col-md-3 mx-4 mb-5">
-                <a href="#" class="blogs-item d-block text-decoration-none">
+                <a href="{% url 'blog' slug='trafik-kazalarinda-sigorta-tazminat-sureci' %}" class="blogs-item d-block text-decoration-none">
                     <h2 class="text-center blogs-item-title pt-5 mx-auto">Trafik Kazalarında Sigorta Tazminat Süreci</h2>
                     <div class="blogs-header d-flex flex-row px-4">
                         <div class="blogs-circle me-3"></div>
@@ -140,7 +140,7 @@
                         <p class="text-center blogs-item-paragraph">
                             Trafik kazası sonrası sigorta tazminatı nasıl alınır? Hasar tespitinden dava sürecine kadar tüm aşamaları öğrenin.
                         </p>
-                        <button class="text-center workspaces-button p-3">İletişime Geçin</button>
+                        <button class="text-center workspaces-button p-3">Okumaya Başlayın</button>
                     </div>
                 </a>
             </div>
@@ -166,11 +166,11 @@
 
                 <div class="col-md-3 text-center d-flex justify-content-center align-items-center flex-column">
                     <h3 class="footer-h3">Çalışma Alanlarımız</h3>
-                    <a href="#" class="footer-link my-2">Ticaret Hukuku</a>
-                    <a href="#" class="footer-link my-2">İş Hukuku</a>
-                    <a href="#" class="footer-link my-2">Aile Hukuku</a>
-                    <a href="#" class="footer-link my-2">Gayrimenkul Hukuku</a>
-                    <a href="#" class="footer-link my-2">Ceza Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">Ticaret Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">İş Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">Aile Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">Gayrimenkul Hukuku</a>
+                    <a href="{% url 'workspaces' %}" class="footer-link my-2">Ceza Hukuku</a>
                 </div>
 
                 <div class="col-md-3 text-center d-flex justify-content-center align-items-center flex-column">
