Footer blog detay linkleri eklendi

--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -175,11 +175,11 @@
 
                 <div class="col-md-3 text-center d-flex justify-content-center align-items-center flex-column">
                     <h3 class="footer-h3">Makaleler</h3>
-                    <a href="#" class="footer-link my-2">Ticaret Hukuku</a>
-                    <a href="#" class="footer-link my-2">İş Hukuku</a>
-                    <a href="#" class="footer-link my-2">Aile Hukuku</a>
-                    <a href="#" class="footer-link my-2">Gayrimenkul Hukuku</a>
-                    <a href="#" class="footer-link my-2">Ceza Hukuku</a>
+                    <a href="{% url 'blog' slug='bosanma-davasinda-mal-paylasimi' %}" class="footer-link my-2">Boşanma Davasında Mal Paylaşımı Nasıl Yapılır?</a>
+                    <a href="{% url 'blog' slug='isten-cikarilma-sonrasi-tazminat-haklari' %}" class="footer-link my-2">İşten Çıkarılma Sonrası Tazminat Hakları</a>
+                    <a href="{% url 'blog' slug='kvkk-nedir-ve-isletmenizi-nasil-etkiler' %}" class="footer-link my-2">KVKK Nedir ve İşletmenizi Nasıl Etkiler?</a>
+                    <a href="{% url 'blog' slug='kira-sozlesmelerinde-kiraci-ve-ev-sahibi-haklari' %}" class="footer-link my-2">Kira Sözleşmelerinde Kiracı ve Ev Sahibi Hakları</a>
+                    <a href="{% url 'blog' slug='miras-hukukunda-sakli-pay-ve-tenkis-davasi' %}" class="footer-link my-2">Miras Hukukunda Saklı Pay ve Tenkis Davası</a>
                 </div>
                 <div class="row d-flex justify-content-center align-items-center flex-row mt-5">
                     <div class="col-md-4 d-flex justify-content-center flex-row">
