--- a/templates/about.html
+++ b/templates/about.html
@@ -72,9 +72,9 @@
         <hr style="color: #fff;">
     </div>
 
-    <div class="container-fluid my-5">
-        <h2 class="text-center about-h2 my-5">Biz Kimiz?</h2>
-        <div class="row d-flex justify-content-between px-5 py-5 mx-5 my-5" id="companyhistory">
+    <div class="container-fluid my-5" id="whoareweabout-container">
+        <h2 class="text-center about-h2 my-5" id="history-title">Biz Kimiz?</h2>
+        <div class="row d-flex justify-content-between px-5 py-5 mx-5 my-5 companyhistory" id="companyhistory">
             <div class="col-md-6 d-flex align-items-center justify-content-center">
                 <h3 class="text-center about-h3">Kuruluş Hikayemiz</h3>
             </div>
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <div class="row d-flex justify-content-between px-5 py-5 mx-5 my-5" id="missionandvision">
+        <div class="row d-flex justify-content-between px-5 py-5 mx-5 my-5 companyhistory" id="missionandvision">
             <div class="col-md-6">
                 <p class="about-text">
                     Misyonumuz, müvekkillerimize en üst düzeyde hukuki danışmanlık sunarak haklarını korumak ve adaletin tecellisi için titizlikle çalışmaktır.
@@ -104,7 +104,7 @@
             </div>
         </div>
 
-        <div class="row d-flex flex-row justify-content-center align-items-center py-5">
+        <div class="row d-flex flex-row justify-content-center align-items-center py-5" id="values-row">
             <div class="valuesborder my-5">
                 <div class="dot dot-top" id="adalet">Adalet</div>
                 <div class="dot dot-right" id="durustluk">Dürüstlük</div>
