--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" id="welcome-container">
         <div class="row my-5">
             <div class="d-flex justify-content-center align-items-center text-center flex-column">
                 <h2 class="welcome-title">Hoşgeldiniz</h2>
@@ -62,7 +62,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" id="#whoarewe-container">
         <div class="row py-5 mx-5 d-flex justify-content-between">
             <div class="col-md-6 ps-md-5">
                 <div class="whoarewe-imageborder">
@@ -289,7 +289,7 @@
         </div>
     </div>
 
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5" id="persons-container">
         <h2 class="text-center services-title">Ekibimiz</h2>
         <p class="text-center services-paragraph">Alanında uzman avukat kadromuz, haklarınızı korumak için yanınızda.</p>
         <div class="row d-flex justify-content-center align-items-center my-5">
@@ -441,8 +441,8 @@
         </div>
     </div>
 
-    <div class="container py-5">
-        <h2 class="text-center services-title">Süreç Nasıl İşliyor?</h2>
+    <div class="container py-5" id="timeline-container">
+        <h2 class="text-center services-title" id="timeline-container-title">Süreç Nasıl İşliyor?</h2>
 
         <div class="timeline">
             <div class="timeline-item d-flex justify-content-end mb-5">
