Hakkımızda sayfası responsive hale getirildi

--- a/templates/about.html
+++ b/templates/about.html
@@ -52,7 +52,7 @@
     <div class="container-fluid my-5">
         <h1 class="text-center about-title">Hakkımızda</h1>
         <p class="text-center about-paragraph pb-5">Ertuğrul Avukatlık olarak, yılların verdiği deneyim ve uzmanlıkla müvekkillerimize güvenilir hukuki danışmanlık sunuyoruz. Adalet, dürüstlük ve müvekkil memnuniyeti ilkelerimizle, haklarınızın korunması için her zaman yanınızdayız.</p>
-        <div class="row d-flex justify-content-between my-5">
+        <div class="row d-flex justify-content-between my-md-5">
             <div class="col-md-3">
                 <img class="img-fluid about-image" src="{% static 'images/hakkimizda1.jpg' %}" id="aboutimage1">
                 <img class="img-fluid about-image" src="{% static 'images/hakkimizda4.jpg' %}" id="aboutimage4">
@@ -74,12 +74,12 @@
 
     <div class="container-fluid my-5" id="whoareweabout-container">
         <h2 class="text-center about-h2 my-5" id="history-title">Biz Kimiz?</h2>
-        <div class="row d-flex justify-content-between px-5 py-5 mx-5 my-5 companyhistory" id="companyhistory">
+        <div class="row d-flex justify-content-between px-md-5 py-md-5 mx-5 my-5 companyhistory" id="companyhistory">
             <div class="col-md-6 d-flex align-items-center justify-content-center">
-                <h3 class="text-center about-h3">Kuruluş Hikayemiz</h3>
+                <h3 class="text-center about-h3 my-3 my-md-none" id="company-title">Kuruluş Hikayemiz</h3>
             </div>
             <div class="col-md-6">
-                <p class="about-text">
+                <p class="about-text text-center">
                     Ertuğrul Avukatlık, 2010 yılında Av. Ertuğrul Başaran tarafından adaletin ve hukuk devletinin ilkelerine olan derin inançla kuruldu.
                     Yıllarca farklı hukuk bürolarında edinilen deneyim ve bireysel müvekkillerin sesini duyurma arzusu, bu yolculuğun temelini oluşturdu.
                     İlk günden itibaren, sadece dava kazanmak değil, müvekkillerimizin haklarını korumak ve onlara güvenilir bir hukuki destek sunmak vizyonuyla hareket ettik.
@@ -89,8 +89,8 @@
             </div>
         </div>
 
-        <div class="row d-flex justify-content-between px-5 py-5 mx-5 my-5 companyhistory" id="missionandvision">
-            <div class="col-md-6">
+        <div class="row d-flex justify-content-between px-md-5 py-md-5 mx-5 my-5 companyhistory" id="missionandvision">
+            <div class="col-md-6 order-2 order-md-1">
                 <p class="about-text">
                     Misyonumuz, müvekkillerimize en üst düzeyde hukuki danışmanlık sunarak haklarını korumak ve adaletin tecellisi için titizlikle çalışmaktır.
                     Her müvekkilimizin ihtiyacını özel olarak ele alıyor, şeffaf iletişim ve stratejik yaklaşımla en doğru çözümleri üretiyoruz.
@@ -99,8 +99,8 @@
                     hukukun toplumsal barış ve adaletin sağlanmasındaki gücüne olan inancımızla geleceğe emin adımlarla ilerliyoruz.
                 </p>
             </div>
-            <div class="col-md-6 d-flex align-items-center justify-content-center">
-                <h3 class="text-center about-h3">Misyon Ve Vizyon</h3>
+            <div class="col-md-6 order-1 order-md-2 d-flex align-items-center justify-content-center">
+                <h3 class="text-center about-h3 my-3">Misyon Ve Vizyon</h3>
             </div>
         </div>
 
