--- a/static/css/style.css
+++ b/static/css/style.css
@@ -847,8 +847,59 @@ body {
 }
 
 .about-paragraph {
-    color: #fff;
-    font-size: 30px;
+        color: #fff;
+        font-size: 25px;
+    }
+
+@media (max-width: 768px) {
+    .about-title {
+        color: #ff7b00;
+        font-size: 60px;
+    }
+
+    .about-paragraph {
+        color: #fff;
+        font-size: 20px;
+    }
+
+    .about-image {
+        position: relative;
+        border-radius: 20px;
+        box-shadow: 0 0 10px #ff7b00;
+        width: 200px !important;
+        z-index: 0;
+        animation: yaxisanimation 1.5s infinite;
+    }
+
+    #aboutimage8 {
+        top: -130px !important;
+        right: -140px !important;
+    }
+
+    #aboutimage5 {
+        top: -20px !important;
+        right: -10px !important;
+        box-shadow: 0 0 10px #2d67cc;
+        display: none !important;
+    }
+
+    #aboutimage3 {
+        top: -140px !important;
+        left: 110px !important;
+        display: none !important;
+    }
+
+    #aboutimage2 {
+        display: none !important;
+    }
+
+    #aboutimage6 {
+        display: none !important;
+    }
+
+    #aboutimage9 {
+        display: none !important;
+    }
 }
 
 .about-image {
@@ -914,6 +965,23 @@ body {
     font-size: 20px;
 }
 
+@media (max-width: 768px) {
+    .about-h3 {
+        color: #2A5298;
+        font-size: 50px;
+    }
+
+    .about-text {
+        color: #fff;
+        font-size: 15px;
+    }
+
+    #company-title {
+        color: #080807;
+        font-size: 50px;
+    }
+}
+
 .about-h2 {
     color: #ff7b00;
     font-size: 70px;
@@ -966,6 +1034,71 @@ body {
     align-items: center;
     font-size: 20px;
     transition: all 0.3s ease;
+}
+
+@media (max-width: 768px) {
+    .dot {
+        position: relative;
+        width: 60px;
+        height: 60px;
+        background-color: #ff7b00;
+        border-radius: 50%;
+        border: 0px;
+        margin: 0px !important;
+        padding: 0px !important;
+        color: #fff;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 13px;
+        transition: all 0.3s ease;
+    }
+
+    .dot-top {
+        top: -40px !important;
+        left: 50% !important;
+        transform: translateX(-50%);
+    }
+
+    .dot-right {
+        right: -150px !important;
+        top: 15% !important;
+        transform: translateY(-50%);
+    }
+
+    .dot-bottom {
+        bottom: -50px !important;
+        left: 50% !important;
+        transform: translateX(-50%);
+    }
+
+    .dot-left {
+        left: -40px !important;
+        top: -45% !important;
+        transform: translateY(-50%);
+    }
+
+    .valuesborder {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        border: 3px solid #ff7b00;
+        position: relative;
+    }
+
+    .valuestext {
+        color: #fff;
+        font-size: 20px !important;
+    }
+
+    .valuescontent {
+        border-radius: 20px;
+        box-shadow: 0 0 20px#ff7b00;
+        width: 300px !important;
+        height: 400px;
+        transition: all 0.3s ease;
+    }
 }
 
 .dot:hover {
